feat: Make edits for SEO enhancement
### Detailed changes
1. Modify description and title of website
2. Add gogole meta tag for gogole search console
3. Add json LD description

--- a/my-react-app/public/index.html
+++ b/my-react-app/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Rex Yong is a NUS undergrad and a problem solver skilled in software and hardware engineering. He is passionate about creating innovative solutions to complex problems."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,42 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Rex Yong: Problem solver, Software & Hardware Engineer</title>
+
+    <!-- Tag for google search console-->
+    <meta name="google-site-verification" content="37aan0ZmCR8Rna4LNSEnbUCw83NUZ4PGISB-M1TRA3o" />
+
+    <!-- JsonLD for website-->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Rex Yong Jin Xiang",
+        "url": "https://rexyong.com",
+        "image": "https://www.rexyong.com/static/media/rex.c99bfd898da7f766f3f0.jpg",
+        "description": "Rex Yong is a NUS undergrad and a problem solver skilled in software and hardware engineering. He is passionate about creating innovative solutions to complex problems.",
+        "sameAs": [
+          "https://www.linkedin.com/in/rexyong/",
+          "https://github.com/rexyyong"
+        ],
+        "alumniOf": {
+          "@type": "EducationalOrganization",
+          "name": "National University of Singapore"
+        },
+        "knowsAbout": [
+          "Software Engineering",
+          "Hardware Engineering",
+          "Problem Solving",
+          "Web Development",
+          "Mobile Development",
+          "Artificial Intelligence",
+          "Machine Learning",
+          "Data Science",
+          "Project Management"
+        ]
+      }
+    </script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
