fix: add open graph and twitter tags to fix title, icon, and search result display on google search

--- a/my-react-app/public/index.html
+++ b/my-react-app/public/index.html
@@ -24,7 +24,18 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Rex Yong: Problem solver, Software & Hardware Engineer</title>
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Rex Yong: Problem solver, Software & Hardware Engineer" />
+    <meta property="og:description" content="Rex Yong is a NUS undergrad and a problem solver skilled in software and hardware engineering. He is passionate about creating innovative solutions to complex problems." />
+    <meta property="og:image" content="https://www.rexyong.com/favicon.png" />
+    <meta property="og:url" content="https://www.rexyong.com" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Rex Yong: Problem solver, Software & Hardware Engineer" />
+    <meta name="twitter:description" content="Rex Yong is a NUS undergrad and a problem solver skilled in software and hardware engineering. He is passionate about creating innovative solutions to complex problems." />
+    <meta name="twitter:image" content="https://www.rexyong.com/favicon.png" />
 
     <!-- Tag for google search console-->
     <meta name="google-site-verification" content="37aan0ZmCR8Rna4LNSEnbUCw83NUZ4PGISB-M1TRA3o" />
